--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="header-content">
                         <div class="header-content-inner">
                             <!-- <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.png" class="img-responsive" alt=""></a -->
-                            <h1>Number What is a new digital clock that provides a unique way of telling time.</h1>
+                            <h1>Number What is a new digital clock for people with <b style="font-weight: 500;">dyscalculia</b>, that provides a unique way of telling time.</h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Let's get started</a>
                         </div>
                     </div>
@@ -116,8 +116,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>Time will come and time will pass</h2>
+                        <p class="text-muted">- Be able to tell when!</p>
                         <hr>
                     </div>
                 </div>
