Added devpost link

--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
                     <div class="badges">
                         <a class="badge-link" href="https://github.com/neobonde/NumberWhatPebble"><img src="img/GitHub_Logo_pebble.png" alt=""></a>
                         <a class="badge-link" href="https://github.com/mkapiczy/NumberWhatAndroid"><img src="img/GitHub_Logo_wear.png" alt=""></a>
+                      </br>
+                      </br>
+                      </br>
+                      <a class="badge-link" href="https://devpost.com/software/number-what"><img src="img/devpost-logo.svg" alt=""></a>
                     </div>
                 </div>
             </div>
