--- a/index.html
+++ b/index.html
@@ -211,13 +211,10 @@
             <p>2017 Number What.</p>
             <ul class="list-inline">
                 <li>
-                    <a href="#">Privacy</a>
+                    <a href="https://auhack.org">AUHack</a>
                 </li>
                 <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
+                    <a href="https://mlh.io">MLH</a>
                 </li>
             </ul>
         </div>
