--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#hack">Hackathon</a>
                     </li>
                 </ul>
             </div>
@@ -207,7 +207,7 @@
     </section>
 
     <footer>
-        <div class="container">
+        <div id="hack" class="container">
             <p>2017 Number What.</p>
             <ul class="list-inline">
                 <li>
