--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <div class="overlay">
             <div class="container ">
                 <div class="intro-text">
-                    <div class="intro-lead-in editable" id="title header1"></div>
+                    <div class="intro-lead-in editable" id="title header1">Velkommen til</div>
                     <div class="intro-lead-in"> <img src="img/logo.png" style="height:auto; width:50%;" class="editable" id="title logo"></div>
-                    <div class="intro-heading editable" id="title header2"></div>
-                    <a href="#portfolio" class="page-scroll btn btn-xl editable" id="title button"></a>
+                    <div class="intro-heading editable" id="title header2">Vi anbefaler at du henter en anden browser da denne ikke er understøttet </div>
+                    <a href="https://www.whatismybrowser.com/" class="page-scroll btn btn-xl editable" id="title button" style="background : #f00; border-color : #f00">Find en anden browser</a>
                 </div>
             </div>
         </div>
